Alternative text versions of stories now have to be wrapped in #alternative and #endalternative tags. We no longer need to have a 'bottom' element in the App, as we are using the #alternative tag as a way to decide whether there is content to reveal (which makes the dismiss button conditional).

--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -1,5 +1,5 @@
 .root {
-  margin: 6rem 0 0;
+  margin: 4rem 0;
   min-height: 5rem;
   font-family: ABCSans;
   font-size: 0.75rem;
@@ -42,17 +42,11 @@
   cursor: pointer;
 }
 
-.bottom {
-  margin-top: 2rem;
-  height: 4rem;
-}
-
-[data-podyssey-root].hasDismissed .dismissChoice,
-[data-podyssey-root]:not(.hasDismissed) ~ * {
+html:not(.hasDismissed) [data-podyssey-root] ~ [name='alternative'] ~ * {
   display: none;
 }
 
-[data-podyssey-root] ~ [name='footer'] ~ :not(:global(.MasterGallery)) {
+[data-podyssey-root] ~ [name='endalternative'] ~ :not(:global(.MasterGallery)) {
   display: block;
 }
 
